--- a/assistant_et_veto/gestion.css
+++ b/assistant_et_veto/gestion.css
@@ -23,3 +23,26 @@ input, select {
 .error { 
     color: red; 
 }
+
+table {
+    border-collapse: collapse;
+    width: 20%;
+    margin-top: 1em;
+}
+
+thead {
+    background-color: #e0e0e0;
+}
+
+th, td {
+    word-wrap: break-word;
+    max-width: 20px;
+    border: 1px solid black;
+    padding: 8px 10px;
+    text-align: left;
+}
+.tarif {
+    border-collapse: collapse;
+    width: 40%;
+    margin-top: 1em;
+}
