--- a/clients/animaux.css
+++ b/clients/animaux.css
@@ -19,3 +19,15 @@ th, td {
     padding: 8px 10px;
     text-align: left;
 }
+
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+
+header > button {
+    max-height: 2rem;
+}
